2025-08-31  Dirk Eddelbuettel  <edd@debian.org>

	* src/Makevars (PKG_CXXFLAGS): Set -DARMA_USE_CURRENT

2025-03-17  Dirk Eddelbuettel  <edd@debian.org>

	* .github/workflows/ci.yaml: Switch to r-ci with implicit bootstrap

2025-02-18  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Release 0.1.8

	* README.md: Remove ancient TravisCI badge, add r-universe and
	dependency badges

2024-10-17  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Authors@R): Added

2024-10-07  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Roll micro version

	* src/devol.cpp (devol): Switch three integer vectors from
	arma::icolvec to std::vector<int32_t> for ARMA_64BIT_WORD compilation

2024-03-01  Dirk Eddelbuettel  <edd@debian.org>

	* .github/workflows/ci.yaml (jobs): Update to actions/checkout@v4,
	add r-ci-setup actions

2023-04-06  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Roll micro version

	* src/Makevars: No longer set a C++ standard

2022-12-18  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Release 0.1.7

	* src/evaluate.h: Move helper function from devol.cpp
	* src/devol.cpp: Idem, remove ancient Armadillo define

	* src/evaluate.h: Update function signatures to use NumericVector
	* src/RcppExports.cpp: Idem
	* R/RcppExport.R: Idem

	* src/exampleFunctions.cpp: Moved out of evaluate.h

2022-12-17  Dirk Eddelbuettel  <edd@debian.org>

	* src/evaluate.h: Compiled function interface back to consistently
	being single argument of parameter vector
	* src/devol.cpp: Idem

 	* man/DEoptim.Rd: Use https, remove dead link to code.html
	* man/DEoptim.control.Rd: Use https
	* man/DEoptim-methods.Rd: Idem

	* .editorconfig: Added

2022-12-15  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Roll minor version

2022-12-08 Max Coulter <max.coulter@xelect.co.uk>

	* src/devol.cpp: Additions to crossover weights from DEoptim

2022-12-02  Dirk Eddelbuettel  <edd@debian.org>
