@@ -1,6 +1,10 @@
 # Generated by using Rcpp::compileAttributes() -> do not edit by hand
 # Generator token: 10BE3573-1514-4C36-9D1C-5A225CD40393
 
+armadilloVersion <- function() {
+    .Call(`_RcppDE_armadilloVersion`)
+}
+
 DEoptim_impl <- function(minbound, maxbound, fnS, control, rhoS) {
     .Call(`_RcppDE_DEoptim_impl`, minbound, maxbound, fnS, control, rhoS)
 }
